2010-03-22 fix incorrect rubber band during the zoom mode when mouse 
           leaves the axes. -JJL

2010-03-21 x/y key during the zoom mode only changes the x/y limits. -JJL

2010-03-20 Added pyplot.sca() function suggested by JJL. - EF

2010-03-20 Added conditional support for new Tooltip API in gtk backend. - EF

2010-03-20 Changed plt.fig_subplot() to plt.subplots() after discussion on
           list, and changed its API to return axes as a numpy object array
           (with control of dimensions via squeeze keyword). FP.

2010-03-13 Manually brought in commits from branch

  ------------------------------------------------------------------------
  r8191 | leejjoon | 2010-03-13 17:27:57 -0500 (Sat, 13 Mar 2010) | 1 line

  fix the bug that handles for scatter are incorrectly set when dpi!=72.
  Thanks to Ray Speth for the bug report.


2010-03-03 Manually brought in commits from branch via diff/patch
        (svnmerge is broken)

  ------------------------------------------------------------------------
  r8175 | leejjoon | 2010-03-03 10:03:30 -0800 (Wed, 03 Mar 2010) | 1 line

  fix arguments of allow_rasterization.draw_wrapper
  ------------------------------------------------------------------------
  r8174 | jdh2358 | 2010-03-03 09:15:58 -0800 (Wed, 03 Mar 2010) | 1 line

  added support for favicon in docs build
  ------------------------------------------------------------------------
  r8173 | jdh2358 | 2010-03-03 08:56:16 -0800 (Wed, 03 Mar 2010) | 1 line

  applied Mattias get_bounds patch
  ------------------------------------------------------------------------
  r8172 | jdh2358 | 2010-03-03 08:31:42 -0800 (Wed, 03 Mar 2010) | 1 line

  fix svnmerge download instructions
  ------------------------------------------------------------------------
  r8171 | jdh2358 | 2010-03-03 07:47:48 -0800 (Wed, 03 Mar 2010) | 1 line



2010-02-25 add annotation_demo3.py that demonstrates new functionality. -JJL
